# rust-vulkan-playground

./: .gitignore  Cargo.toml  README.md  compile.sh  vulkan-log.txt
res/damaged_helmet/: scene.gltf
res/models/: plane.glb
res/models/WaterBottle/: WaterBottle.gltf
res/models/cube/: cube.gltf
res/models/damaged_helmet/: scene.gltf
res/models/plane/: plane.gltf
res/models/sphere/: sphere.gltf
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: main.rs  triangle.rs
src/imgui_renderer/: backend.rs  mod.rs  shaders.rs
src/renderer/: ambient_light_system.rs  brdf.rs  camera.rs  context.rs  cubemap_gen_pass.rs  cubemap_generation_pass.rs  dir_light_shadows.rs  entity.rs  gbuffer.rs  gen_hdr_cubemap.rs  irradiance_pass.rs  light_system.rs  local_probe.rs  mesh.rs  mod.rs  model.rs  point_light_shadows.rs  renderer.rs  scene.rs  screen_frame.rs  shaders.rs  skybox_pass.rs  ssao.rs  ssao_blur.rs  texture.rs  transform.rs  vertex.rs
src/renderer/shaders/: ambient_light.frag  ambient_light.vert  brdf.frag  brdf.vert  fullscreen.vert  gbuffer.frag  gbuffer.vert  gen_hdr_cubemap.frag  irradiance_convolution.frag  light.frag  light.vert  local_probe.frag  local_probe.vert  model.frag  model.vert  pbr.frag  prefilterenvmap.frag  skybox.vert  ssao.frag  ssao_blur.frag
