[package]
authors = ["baransu <tomaszcichocinski@gmail.com>"]
edition = "2018"
name = "rust-vulkan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.15.0"
vulkano = "0.26.0"
vulkano-shaders = "0.26.0"
vulkano-win = "0.26.0"
winit = "0.25.0"
