[package]
authors = ["baransu <tomaszcichocinski@gmail.com>"]
edition = "2018"
name = "rust-vulkan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
glam = "0.20.1"
image = "0.23.14"
imgui = "0.8.0"
imgui-winit-support = "0.8.0"
ktx = "0.3.2"
rand = "0.8.4"
vulkano = {git = "https://github.com/baransu/vulkano", rev = "5a1b940a"}
vulkano-shaders = {git = "https://github.com/baransu/vulkano", rev = "5a1b940a"}
vulkano-win = {git = "https://github.com/baransu/vulkano", rev = "5a1b940a"}
winit = "0.25.0"

[dependencies.gltf]
features = ["extras", "names"]
version = "0.16"
